About us page changes + social icon alignment with navbar fix

--- a/src/index.scss
+++ b/src/index.scss
@@ -95,9 +95,9 @@
 
 .social-icon{
     position: absolute;
-    right: 1%;
     color: white;
-    z-index: 9999;
-    top: 3%;
+    right: 2%;
+    top: 1.5%;
     font-size: 12px;
+    z-index: 9999;
 }
